crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__figure_of_destiny_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
assertion_line: 707
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "GenericEffect",
        "static_abilities": [
          {
            "mode": "Continuous",
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [
              {
                "type": "SetPower",
                "value": 2
              },
              {
                "type": "SetToughness",
                "value": 2
              },
              {
                "type": "AddType",
                "core_type": "Creature"
              },
              {
                "type": "RemoveAllSubtypes",
                "set": "Creature"
              },
              {
                "type": "AddSubtype",
                "subtype": "Kithkin"
              },
              {
                "type": "AddSubtype",
                "subtype": "Spirit"
              }
            ],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "become a Kithkin Spirit with base power and toughness 2/2"
          }
        ],
        "duration": "Permanent",
        "target": null
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [
            "RedWhite"
          ],
          "generic": 0
        }
      },
      "sub_ability": null,
      "duration": "Permanent",
      "description": "{R/W}: ~ becomes a Kithkin Spirit with base power and toughness 2/2.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "GenericEffect",
        "static_abilities": [
          {
            "mode": "Continuous",
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [
              {
                "type": "SetPower",
                "value": 4
              },
              {
                "type": "SetToughness",
                "value": 4
              },
              {
                "type": "AddType",
                "core_type": "Creature"
              },
              {
                "type": "RemoveAllSubtypes",
                "set": "Creature"
              },
              {
                "type": "AddSubtype",
                "subtype": "Kithkin"
              },
              {
                "type": "AddSubtype",
                "subtype": "Spirit"
              },
              {
                "type": "AddSubtype",
                "subtype": "Warrior"
              }
            ],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "become a Kithkin Spirit Warrior with base power and toughness 4/4"
          }
        ],
        "duration": "Permanent",
        "target": null
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [
            "RedWhite",
            "RedWhite",
            "RedWhite"
          ],
          "generic": 0
        }
      },
      "sub_ability": null,
      "duration": "Permanent",
      "description": "{R/W}{R/W}{R/W}: If ~ is a Spirit, it becomes a Kithkin Spirit Warrior with base power and toughness 4/4.",
      "target_prompt": null,
      "condition": {
        "type": "SourceMatchesFilter",
        "filter": {
          "type": "Typed",
          "type_filters": [
            {
              "Subtype": "Spirit"
            }
          ],
          "controller": null,
          "properties": []
        }
      },
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "GenericEffect",
        "static_abilities": [
          {
            "mode": "Continuous",
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [
              {
                "type": "SetPower",
                "value": 8
              },
              {
                "type": "SetToughness",
                "value": 8
              },
              {
                "type": "AddKeyword",
                "keyword": "Flying"
              },
              {
                "type": "AddKeyword",
                "keyword": "FirstStrike"
              },
              {
                "type": "AddType",
                "core_type": "Creature"
              },
              {
                "type": "RemoveAllSubtypes",
                "set": "Creature"
              },
              {
                "type": "AddSubtype",
                "subtype": "Kithkin"
              },
              {
                "type": "AddSubtype",
                "subtype": "Spirit"
              },
              {
                "type": "AddSubtype",
                "subtype": "Warrior"
              },
              {
                "type": "AddSubtype",
                "subtype": "Avatar"
              }
            ],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "become a Kithkin Spirit Warrior Avatar with base power and toughness 8/8, flying, and first strike"
          }
        ],
        "duration": "Permanent",
        "target": null
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [
            "RedWhite",
            "RedWhite",
            "RedWhite",
            "RedWhite",
            "RedWhite",
            "RedWhite"
          ],
          "generic": 0
        }
      },
      "sub_ability": null,
      "duration": "Permanent",
      "description": "{R/W}{R/W}{R/W}{R/W}{R/W}{R/W}: If ~ is a Warrior, it becomes a Kithkin Spirit Warrior Avatar with base power and toughness 8/8, flying, and first strike.",
      "target_prompt": null,
      "condition": {
        "type": "SourceMatchesFilter",
        "filter": {
          "type": "Typed",
          "type_filters": [
            {
              "Subtype": "Warrior"
            }
          ],
          "controller": null,
          "properties": []
        }
      },
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
